--- a/index.html
+++ b/index.html
@@ -2,5 +2,8 @@
 <html>
     <head>
     <title>Ver.0.0.2</title>
+        <body>
+            <h1>Welcome in Ver 0.1</h1>
+        </body>
         </head>
 </html>  
